--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,25 +6,32 @@ main {
   display: flex;
 }
 
-.add {
+.circle {
   margin: 50px;
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  background-color: #919191;
   display: flex;
   justify-content: center;
   align-items: center;
-  opacity: 0.6;
   transition: ease-in-out 0.3s;
 }
 
-.add:hover {
+.circle:hover {
   transform: scale(1.2);
   transform-origin: center;
 }
 
-.add img {
+.circle img {
   width: 30px;
   height: 30px;
+}
+
+.add {
+  background-color: #919191;
+  opacity: 0.6;
+}
+
+.dot {
+  background-color: #ff0000;
 }
