--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,35 @@ body {
 }
 
 main {
+  position: relative;
+  height: 100%;
+}
+
+.edit {
+  /* display: none; */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.dots {
   display: flex;
+}
+
+.box {
+  width: 800px;
+  height: 500px;
+  background-color: #0000005d;
+  border-radius: 40px;
+  backdrop-filter: blur(5px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text {
+  width: 70%;
 }
 
 .circle {
@@ -33,5 +61,31 @@ main {
 }
 
 .dot {
+  background-color: #ff0000;
+}
+
+.box textarea {
+  width: 100%;
+  border-radius: 10px;
+}
+
+.one {
+  height: 10%;
+}
+
+.two {
+  height: 60%;
+}
+
+.color {
+  width: 10%;
+}
+
+.smalldot {
+  margin-left: 50px;
+  margin-bottom: 30px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
   background-color: #ff0000;
 }
